@@ -401,7 +401,8 @@ copy build\release_x64\PLCore.lib ..\..\Bin\Lib\x64\
       <ExcludedFromBuild Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">true</ExcludedFromBuild>
       <ExcludedFromBuild Condition="'$(Configuration)|$(Platform)'=='Release|x64'">true</ExcludedFromBuild>
     </ClCompile>
-    <ClCompile Include="src\System\MutexWindows.cpp" />
+    <ClCompile Include="src\System\MutexWindows_CriticalSection.cpp" />
+    <ClCompile Include="src\System\MutexWindows_Mutex.cpp" />
     <ClCompile Include="src\System\Pipe.cpp" />
     <ClCompile Include="src\System\Process.cpp" />
     <ClCompile Include="src\System\Semaphore.cpp" />
@@ -416,6 +417,8 @@ copy build\release_x64\PLCore.lib ..\..\Bin\Lib\x64\
     <ClCompile Include="src\System\System.cpp" />
     <ClInclude Include="include\PLCore\File\FileAndroid.h" />
     <ClInclude Include="include\PLCore\File\FileSearchAndroid.h" />
+    <ClInclude Include="include\PLCore\System\MutexWindows_CriticalSection.h" />
+    <ClInclude Include="include\PLCore\System\MutexWindows_Mutex.h" />
     <ClInclude Include="include\PLCore\System\SystemMacOSX.h" />
     <ClInclude Include="src\System\SystemAndroid.cpp">
       <ExcludedFromBuild Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">true</ExcludedFromBuild>
@@ -679,7 +682,6 @@ copy build\release_x64\PLCore.lib ..\..\Bin\Lib\x64\
     <ClInclude Include="include\PLCore\System\MutexGuard.h" />
     <ClInclude Include="include\PLCore\System\MutexImpl.h" />
     <ClInclude Include="include\PLCore\System\MutexLinux.h" />
-    <ClInclude Include="include\PLCore\System\MutexWindows.h" />
     <ClInclude Include="include\PLCore\System\Pipe.h" />
     <ClInclude Include="include\PLCore\System\Process.h" />
     <ClInclude Include="include\PLCore\System\Semaphore.h" />
