@@ -379,9 +379,6 @@
     <ClCompile Include="src\System\MutexLinux.cpp">
       <Filter>System</Filter>
     </ClCompile>
-    <ClCompile Include="src\System\MutexWindows.cpp">
-      <Filter>System</Filter>
-    </ClCompile>
     <ClCompile Include="src\System\Pipe.cpp">
       <Filter>System</Filter>
     </ClCompile>
@@ -584,6 +581,12 @@
       <Filter>File</Filter>
     </ClCompile>
     <ClCompile Include="src\System\SystemMacOSX.cpp">
+      <Filter>System</Filter>
+    </ClCompile>
+    <ClCompile Include="src\System\MutexWindows_Mutex.cpp">
+      <Filter>System</Filter>
+    </ClCompile>
+    <ClCompile Include="src\System\MutexWindows_CriticalSection.cpp">
       <Filter>System</Filter>
     </ClCompile>
   </ItemGroup>
@@ -1092,9 +1095,6 @@
     <ClInclude Include="include\PLCore\System\MutexLinux.h">
       <Filter>System</Filter>
     </ClInclude>
-    <ClInclude Include="include\PLCore\System\MutexWindows.h">
-      <Filter>System</Filter>
-    </ClInclude>
     <ClInclude Include="include\PLCore\System\Pipe.h">
       <Filter>System</Filter>
     </ClInclude>
@@ -1345,6 +1345,12 @@
       <Filter>File</Filter>
     </ClInclude>
     <ClInclude Include="include\PLCore\System\SystemMacOSX.h">
+      <Filter>System</Filter>
+    </ClInclude>
+    <ClInclude Include="include\PLCore\System\MutexWindows_Mutex.h">
+      <Filter>System</Filter>
+    </ClInclude>
+    <ClInclude Include="include\PLCore\System\MutexWindows_CriticalSection.h">
       <Filter>System</Filter>
     </ClInclude>
   </ItemGroup>
